--- a/src/App.css
+++ b/src/App.css
@@ -51,13 +51,40 @@
 
 #context {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: center;
+  height: 100px;
+
 }
 
 .char {
   background-color: aliceblue;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  flex-wrap: wrap;
+  transform: translate(0px, 0px);
+  transition: transform 500ms;
+  transition: .5s;
 }
+
+.bounce-in {
+  animation: bounceIn 0.5s;
+}
+
+
+
+#left, #right {
+  margin-top: 2rem;
+}
+
+
+
+.char:hover{
+  opacity: 0.8;
+    box-shadow: 0 5px 10px black; 
+  }
+
 
 #main-section {
   margin: 2rem;
@@ -76,3 +103,23 @@
   min-height: 100vh;
   background-color: #404549;
 }
+
+#target {
+  position: absolute;
+  top: 60px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border-style: dashed;
+  border-color: coral;
+  border-width: 2px;
+}
+
+
+@keyframes bounceIn {
+  0% { opacity: 0; transform: scale(.3);}
+  50% { opacity: 1; transform: scale(1.05);}
+  70% {transform: scale(.9);}
+  100% {transform: scale(1);}
+} 
+
