--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .App {
   display: flex;
   flex-direction: column;
@@ -20,7 +24,7 @@
 
 .main-container {
   display: flex;
-  /* height: 100vh; */
+  min-height: 100vh;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -152,16 +156,11 @@
 
 #takeover {
   display: flex;
+  gap: 1rem;
+  padding-top: 2rem;
   flex-direction: column;
-  gap: 2rem;
-  justify-content: center;
   align-items: center;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #404549;
+  background-color: floralwhite
 }
 
 #target {
@@ -348,6 +347,17 @@
   top: 0;
 }
 
+#scoreboard {
+  padding-top: 0.5 rem;
+  width: 100%;
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+}
+
+.result-header {
+  padding-bottom: 1rem;
+}
 
 @keyframes spin {
   0%, 15% {
