add initials entry form on completing the puzzle

--- a/src/App.css
+++ b/src/App.css
@@ -582,3 +582,11 @@ ul {
   top: 0;
   border-radius: 10px;
 }
+
+.disabled:after { 
+  background: #777574;
+}
+
+.disabled:before { 
+  animation: none
+}
