--- a/src/App.css
+++ b/src/App.css
@@ -590,3 +590,24 @@ ul {
 .disabled:before { 
   animation: none
 }
+
+input {
+  background-color: #fff!important;
+  color: #333!important;
+  border-color: #ccc!important;
+  border-radius: 4px!important;
+  border-style: solid!important;
+  border-width: 1px!important;
+  font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+  font-size: 14px!important;
+  height: auto;
+  line-height: 21px!important;
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 10px 10px!important;
+  width: 100%!important;
+  box-sizing: border-box!important;
+  max-width: 100%!important;
+}
